[tool.poetry]
name = "tweeter"
version = "0.1.0"
description = "A tool to help you wipe your tweets after Twitter API goes down!"
authors = ["Thomaz Guadagnini <thzgr@tuta.io>", "Mateus Rodrigues <mat3usrc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
selenium = "^4.8.0"
beautifulsoup4 = "^4.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
